--- a/python/problem_040.ipynb
+++ b/python/problem_040.ipynb
@@ -5,7 +5,7 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 40\n",
+    "# Problem 40\n",
     "https://projecteuler.net/problem=40"
    ]
   },
@@ -14,9 +14,25 @@
    "execution_count": 1,
    "id": "68f3f050",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python v3.11.10\n"
+     ]
+    }
+   ],
    "source": [
-    "import euler"
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1253c56",
+   "metadata": {},
+   "source": [
+    "### Solution"
    ]
   },
   {
@@ -62,26 +78,55 @@
     }
    ],
    "source": [
+    "# answer\n",
     "champernowne(10**6)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7c860257",
+   "id": "88eac53b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "28.3 ms ± 270 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "23.2 ms ± 142 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o champernowne(10**6)\n",
-    "euler.save_benchmark(40, t)"
+    "# benchmark\n",
+    "%timeit champernowne(10**6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2aa6543",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "392abed8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23.9 ms ± 957 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "bm = %timeit -o champernowne(10**6)\n",
+    "import euler\n",
+    "euler.save_benchmark(40, bm)"
    ]
   }
  ],
@@ -101,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
