--- a/julia/problem_041.ipynb
+++ b/julia/problem_041.ipynb
@@ -5,24 +5,42 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 41\n",
+    "# Problem 41\n",
     "https://projecteuler.net/problem=41"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9ddad57f",
+   "id": "0ab09475",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Julia v1.11.1\n"
+     ]
+    }
+   ],
    "source": [
-    "using Primes, BenchmarkTools\n",
-    "include(\"./euler.jl\");"
+    "println(\"Julia v\", string(VERSION))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "ba162115",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using BenchmarkTools\n",
+    "using Primes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "5ca88ca0",
    "metadata": {},
    "outputs": [
@@ -45,15 +63,22 @@
    "id": "6491bb80",
    "metadata": {},
    "source": [
-    "#### Solution 1 (filter, maximum)"
+    "### Solution 1 (filter, maximum)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "a15c752a",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  7.527 s (201005820 allocations: 12.96 GiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -65,39 +90,7 @@
     }
    ],
    "source": [
-    "maximum(filter(ispandigital, primes(987654321)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "07dd188b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BenchmarkTools.Trial: 1 sample with 1 evaluation.\n",
-       " Single result which took \u001b[34m8.085 s\u001b[39m (5.01% GC) to evaluate,\n",
-       " with a memory estimate of \u001b[33m12.96 GiB\u001b[39m, over \u001b[33m201005820\u001b[39m allocations."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "b = @benchmark maximum(filter(ispandigital, primes(987654321)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "255b1dff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "euler.save_benchmark(41, b);"
+    "@btime maximum(filter(ispandigital, primes(987654321)))"
    ]
   },
   {
@@ -105,15 +98,22 @@
    "id": "d75bf4b0",
    "metadata": {},
    "source": [
-    "#### Solution 2 (filter, last)"
+    "### Solution 2 (filter, last)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "7101c2e5",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  7.531 s (201005820 allocations: 12.96 GiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -125,39 +125,7 @@
     }
    ],
    "source": [
-    "last(filter(ispandigital, primes(987654321)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "0229cb45",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BenchmarkTools.Trial: 1 sample with 1 evaluation.\n",
-       " Single result which took \u001b[34m8.506 s\u001b[39m (5.87% GC) to evaluate,\n",
-       " with a memory estimate of \u001b[33m12.96 GiB\u001b[39m, over \u001b[33m201005820\u001b[39m allocations."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "b = @benchmark last(filter(ispandigital, primes(987654321)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "3da2229f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "euler.save_benchmark(41, b);"
+    "@btime last(filter(ispandigital, primes(987654321)))"
    ]
   },
   {
@@ -165,15 +133,22 @@
    "id": "06fe20a0",
    "metadata": {},
    "source": [
-    "#### Solution 3 (list comprehension)"
+    "### Solution 3 (list comprehension)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "c85b18da",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  7.787 s (201005815 allocations: 12.58 GiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -185,39 +160,7 @@
     }
    ],
    "source": [
-    "maximum(p for p in primes(987654321) if ispandigital(p))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "c3f0af80",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BenchmarkTools.Trial: 1 sample with 1 evaluation.\n",
-       " Single result which took \u001b[34m8.674 s\u001b[39m (6.15% GC) to evaluate,\n",
-       " with a memory estimate of \u001b[33m12.58 GiB\u001b[39m, over \u001b[33m201005815\u001b[39m allocations."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "b = @benchmark maximum(p for p in primes(987654321) if ispandigital(p))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "d0872d7a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "euler.save_benchmark(41, b);"
+    "@btime maximum(p for p in primes(987654321) if ispandigital(p))"
    ]
   },
   {
@@ -225,12 +168,12 @@
    "id": "3999151e",
    "metadata": {},
    "source": [
-    "#### Solution 4 (custom)"
+    "### Solution 4 (custom)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "4d05efec",
    "metadata": {},
    "outputs": [
@@ -254,10 +197,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "5a18a903",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  7.589 s (198934270 allocations: 12.85 GiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -269,45 +219,33 @@
     }
    ],
    "source": [
-    "firsttrue(ispandigital, reverse(primes(987654321)))"
+    "@btime firsttrue(ispandigital, reverse(primes(987654321)))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "c90443ae",
+   "cell_type": "markdown",
+   "id": "e9c91e1e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BenchmarkTools.Trial: 1 sample with 1 evaluation.\n",
-       " Single result which took \u001b[34m8.519 s\u001b[39m (6.08% GC) to evaluate,\n",
-       " with a memory estimate of \u001b[33m12.85 GiB\u001b[39m, over \u001b[33m198934270\u001b[39m allocations."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "b = @benchmark firsttrue(ispandigital, reverse(primes(987654321)))"
+    "### Save benchmark"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "604fdd5a",
+   "execution_count": 9,
+   "id": "b7e49bf0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "euler.save_benchmark(41, b);"
+    "include(\"./euler.jl\")\n",
+    "bm = @benchmark maximum(filter(ispandigital, primes(987654321)))\n",
+    "euler.save_benchmark(41, bm);"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -315,7 +253,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
