--- a/python/problem_042.ipynb
+++ b/python/problem_042.ipynb
@@ -5,24 +5,49 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 42\n",
+    "# Problem 42\n",
     "https://projecteuler.net/problem=42"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9121639c",
+   "id": "b19450ab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python v3.11.10\n"
+     ]
+    }
+   ],
    "source": [
-    "import string\n",
-    "import euler"
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67196f39",
+   "metadata": {},
+   "source": [
+    "### Solution"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "9121639c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "2ba089a2",
    "metadata": {},
    "outputs": [],
@@ -33,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "2c92bf21",
    "metadata": {},
    "outputs": [],
@@ -44,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c511cd1f",
    "metadata": {},
    "outputs": [],
@@ -60,12 +85,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "c471c8d2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def coded_triangle_numbers():\n",
+    "def coded_triangle_numbers(words):\n",
     "    triangle_list = triangles(max([len(w) for w in words]))\n",
     "    counter = 0\n",
     "    for word in words:\n",
@@ -79,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "772de720",
    "metadata": {},
    "outputs": [
@@ -89,18 +114,46 @@
        "162"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "coded_triangle_numbers()"
+    "# answer\n",
+    "coded_triangle_numbers(words)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
+   "id": "582246ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "704 μs ± 3.96 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "%timeit coded_triangle_numbers(words)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55508245",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "30e46679",
    "metadata": {},
    "outputs": [
@@ -108,13 +161,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "900 μs ± 7.65 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "692 μs ± 6.26 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o coded_triangle_numbers()\n",
-    "euler.save_benchmark(42, t)"
+    "bm = %timeit -o coded_triangle_numbers(words)\n",
+    "import euler\n",
+    "euler.save_benchmark(42, bm)"
    ]
   }
  ],
@@ -134,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
