--- a/julia/problem_043.ipynb
+++ b/julia/problem_043.ipynb
@@ -5,31 +5,120 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 43\n",
+    "# Problem 43\n",
     "https://projecteuler.net/problem=43"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e3110ace",
+   "id": "1a481548",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Julia v1.11.1\n"
+     ]
+    }
+   ],
    "source": [
-    "using Combinatorics, BenchmarkTools\n",
-    "include(\"./euler.jl\");"
+    "println(\"Julia v\", string(VERSION))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "e3110ace",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using BenchmarkTools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa17b6e5",
+   "metadata": {},
+   "source": [
+    "### Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ed8d9ae2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using Combinatorics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "9ec4ad7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function concat_ints(l::Array{Int64, 1})::Int64\n",
+    "    \"\"\"\n",
+    "    concat_ints([3, 4, 5]) == 345\n",
+    "    \"\"\"\n",
+    "    # @assert all(n -> n ∈ 0:9, l) \"Only integers in range 0:9 are valid inputs\"\n",
+    "    s = 0 # sum\n",
+    "    for (i, n) in enumerate(reverse(l))\n",
+    "        s += n * 10^(i-1)\n",
+    "    end\n",
+    "    return s\n",
+    "end\n",
+    "\n",
+    "@assert concat_ints([0, 1, 2]) == 12\n",
+    "@assert concat_ints([2, 1, 0]) == 210"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1b546161",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function divisibility(n::Int)::Bool\n",
+    "    stringnum = string(n)\n",
+    "    if parse(Int64, stringnum[2:4]) % 2 == 0\n",
+    "        if parse(Int64, stringnum[3:5]) % 3 == 0\n",
+    "            if parse(Int64, stringnum[4:6]) % 5 == 0\n",
+    "                if parse(Int64, stringnum[5:7]) % 7 == 0\n",
+    "                    if parse(Int64, stringnum[6:8]) % 11 == 0\n",
+    "                        if parse(Int64, stringnum[7:9]) % 13 == 0\n",
+    "                            if parse(Int64, stringnum[8:10]) % 17 == 0\n",
+    "                                return true\n",
+    "                            end\n",
+    "                        end\n",
+    "                    end\n",
+    "                end\n",
+    "            end\n",
+    "        end\n",
+    "    end\n",
+    "    return false\n",
+    "end\n",
+    "\n",
+    "@assert divisibility(1406357289)\n",
+    "@assert !divisibility(1234567890)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0c1245a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "concat_ints (generic function with 1 method)"
+       "solution (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -37,14 +126,12 @@
     }
    ],
    "source": [
-    "function concat_ints(l::Array{Int64, 1})::Int64\n",
-    "    \"\"\"\n",
-    "    concat_ints([3, 4, 5]) == 345\n",
-    "    \"\"\"\n",
-    "    @assert all(n -> n ∈ 0:9, l) \"Only integers in range 0:9 are valid inputs\"\n",
+    "function solution()\n",
     "    s = 0 # sum\n",
-    "    for (i, n) in enumerate(reverse(l))\n",
-    "        s += n * 10^(i-1)\n",
+    "    for n ∈ [concat_ints(permutation) for permutation in Combinatorics.Permutations(0:9, 10) if first(permutation) != 0]\n",
+    "        if divisibility(n)\n",
+    "            s += n\n",
+    "        end\n",
     "    end\n",
     "    return s\n",
     "end"
@@ -52,10 +139,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "e59ae99f",
+   "execution_count": 7,
+   "id": "ece4e512",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  814.575 ms (40111415 allocations: 2.01 GiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -67,96 +161,33 @@
     }
    ],
    "source": [
-    "permutations = [concat_ints(l) for l in Combinatorics.Permutations{Vector{Int64}}(0:9, 10)]\n",
-    "pandigitals = [p for p in permutations if ndigits(p) == 10]\n",
-    "s = 0 # sum\n",
-    "for n in pandigitals\n",
-    "    stringnum = string(n)\n",
-    "    if parse(Int64, stringnum[2:4]) % 2 == 0\n",
-    "        if parse(Int64, stringnum[3:5]) % 3 == 0\n",
-    "            if parse(Int64, stringnum[4:6]) % 5 == 0\n",
-    "                if parse(Int64, stringnum[5:7]) % 7 == 0\n",
-    "                    if parse(Int64, stringnum[6:8]) % 11 == 0\n",
-    "                        if parse(Int64, stringnum[7:9]) % 13 == 0\n",
-    "                            if parse(Int64, stringnum[8:10]) % 17 == 0\n",
-    "                                s += n\n",
-    "                            end\n",
-    "                        end\n",
-    "                    end\n",
-    "                end\n",
-    "            end\n",
-    "        end\n",
-    "    end\n",
-    "end\n",
-    "s"
+    "@btime solution()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "ffad227f",
+   "cell_type": "markdown",
+   "id": "c951db38",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BenchmarkTools.Trial: 7 samples with 1 evaluation.\n",
-       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m743.982 ms\u001b[22m\u001b[39m … \u001b[35m831.673 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m15.71% … 22.61%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m745.336 ms               \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m15.98%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m757.312 ms\u001b[22m\u001b[39m ± \u001b[32m 32.797 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m17.00% ±  2.52%\n",
-       "\n",
-       "  \u001b[34m█\u001b[39m\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[32m \u001b[39m\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \n",
-       "  \u001b[34m█\u001b[39m\u001b[39m▅\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[32m▁\u001b[39m\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▅\u001b[39m \u001b[39m▁\n",
-       "  744 ms\u001b[90m           Histogram: frequency by time\u001b[39m          832 ms \u001b[0m\u001b[1m<\u001b[22m\n",
-       "\n",
-       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m1.88 GiB\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m33942460\u001b[39m."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "b = @benchmark begin\n",
-    "    permutations = [concat_ints(l) for l in Combinatorics.Permutations{Vector{Int64}}(0:9, 10)]\n",
-    "    pandigitals = [p for p in permutations if ndigits(p) == 10]\n",
-    "    s = 0 # sum\n",
-    "    for n in pandigitals\n",
-    "        stringnum = string(n)\n",
-    "        if parse(Int64, stringnum[2:4]) % 2 == 0\n",
-    "            if parse(Int64, stringnum[3:5]) % 3 == 0\n",
-    "                if parse(Int64, stringnum[4:6]) % 5 == 0\n",
-    "                    if parse(Int64, stringnum[5:7]) % 7 == 0\n",
-    "                        if parse(Int64, stringnum[6:8]) % 11 == 0\n",
-    "                            if parse(Int64, stringnum[7:9]) % 13 == 0\n",
-    "                                if parse(Int64, stringnum[8:10]) % 17 == 0\n",
-    "                                    s += n\n",
-    "                                end\n",
-    "                            end\n",
-    "                        end\n",
-    "                    end\n",
-    "                end\n",
-    "            end\n",
-    "        end\n",
-    "    end\n",
-    "    s\n",
-    "end"
+    "### Save benchmark"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "44a439f9",
+   "execution_count": 8,
+   "id": "f00e115f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "euler.save_benchmark(43, b);"
+    "include(\"./euler.jl\")\n",
+    "bm = @benchmark solution()\n",
+    "euler.save_benchmark(43, bm);"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -164,7 +195,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
